Mobile drop down menu

--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
       </div>
     </nav>
 
+    <div class="mobile-drop-menu">
+      <a class="link-drop-menu" href="#">About</a>
+      <a class="link-drop-menu" href="#">Services</a>
+      <a class="link-drop-menu" href="#">Projects</a>
+      <button type="button" class="cta-drop-menu">CONTACT</button>
+    </div>
   </header>
 
   <!----------------MAIN------------------>
